Modern IDB: ObjectStore Blob Support. https://bugs.webkit.org/show_bug.cgi?id=143193

Reviewed by Alex Christensen.

Source/WebCore:

Tests: imported/blink/storage/indexeddb/blob-basics-metadata.html
       imported/blink/storage/indexeddb/blob-delete-objectstore-db.html
       imported/blink/storage/indexeddb/blob-valid-after-deletion.html
       imported/blink/storage/indexeddb/blob-valid-before-commit.html
       imported/blink/storage/indexeddb/empty-blob-file.html
       storage/indexeddb/modern/blob-simple.html

Most of the work has been done already.

Besides a handful of tweaks to that work, all this really does is remove the clause
that prevents blob URLs from going into the database.

* Modules/indexeddb/IDBObjectStore.cpp:
(WebCore::IDBObjectStore::putOrAdd): Only disallow blobs if private browsing is enabled
  (Making that work is already covered by another bug)

* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::putOrAddOnServer):

* Modules/indexeddb/IDBValue.cpp:
(WebCore::IDBValue::IDBValue):

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::deleteUnusedBlobFileRecords):
(WebCore::IDBServer::SQLiteIDBBackingStore::deleteBackingStore):

* Modules/indexeddb/server/SQLiteIDBTransaction.cpp:
(WebCore::IDBServer::SQLiteIDBTransaction::deleteBlobFilesIfNecessary):

* platform/network/BlobRegistryImpl.cpp:
(WebCore::BlobRegistryImpl::writeBlobsToTemporaryFiles):

* platform/sql/SQLiteFileSystem.cpp:
(WebCore::SQLiteFileSystem::deleteDatabaseFile): Delete all database-related files
  now that we use WAL mode.

Source/WebKit2:

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::preregisterSandboxExtensionsForOptionallyFileBackedBlob): Don't ASSERT that
  this is the first we've heard of this path - The Connection now remembers all extensions.
(WebKit::NetworkConnectionToWebProcess::getBlobDataFileReferenceForPath): Don't take - Just get.

LayoutTests:

Note: The blob-basics-metadata.html test has some failure lines in it because we don't support the
File constructor.

Once support is added, that test will start failing with the correct results, at which point we
can update expectations.

* imported/blink/storage/indexeddb/blob-basics-metadata-expected.txt: Added.
* imported/blink/storage/indexeddb/blob-basics-metadata.html: Added.
* imported/blink/storage/indexeddb/blob-delete-objectstore-db-expected.txt: Added.
* imported/blink/storage/indexeddb/blob-delete-objectstore-db.html: Added.
* imported/blink/storage/indexeddb/blob-valid-after-deletion-expected.txt: Added.
* imported/blink/storage/indexeddb/blob-valid-after-deletion.html: Added.
* imported/blink/storage/indexeddb/blob-valid-before-commit-expected.txt: Added.
* imported/blink/storage/indexeddb/blob-valid-before-commit.html: Added.
* imported/blink/storage/indexeddb/empty-blob-file-expected.txt: Added.
* imported/blink/storage/indexeddb/empty-blob-file.html: Added.
* imported/blink/storage/indexeddb/resources/empty.txt: Added.
* imported/blink/storage/indexeddb/resources/shared.js: Added.
* imported/blink/storage/indexeddb/resources/test-data.html: Added.
* imported/blink/storage/indexeddb/resources/test-data.txt: Added.

* platform/wk2/TestExpectations:

* storage/indexeddb/modern/blob-simple-expected.txt: Added.
* storage/indexeddb/modern/blob-simple.html: Added.
* storage/indexeddb/modern/resources/blob-simple.js: Added.

* storage/indexeddb/noblobs-expected.txt: Removed.
* storage/indexeddb/noblobs-private-expected.txt: Removed.
* storage/indexeddb/noblobs-private.html: Removed.
* storage/indexeddb/noblobs.html: Removed.
* storage/indexeddb/resources/noblobs.js: Removed.

Canonical link: https://commits.webkit.org/174865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199730 268f45cc-cd09-0410-ab3c-d52691b4dbfc