Source/WebCore/Modules/indexeddb/IDBValue.cpp
@@ -52,6 +52,7 @@ IDBValue::IDBValue(const SerializedScriptValue& scriptValue, const Vector<String
     , m_blobURLs(blobURLs)
     , m_blobFilePaths(blobFilePaths)
 {
+    ASSERT(m_data.data());
 }
 
 IDBValue::IDBValue(const ThreadSafeDataBuffer& value, Vector<String>&& blobURLs, Vector<String>&& blobFilePaths)
